# generative_ai_with_langchain

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  langchain_ai.yaml  pyproject.toml  requirements.txt  show_version
.github/ISSUE_TEMPLATE/: bug--feature--or-problem.md
chapter3/: LLMs_chat_models_and_prompts.ipynb  README.md  Running local models.ipynb  Running_local_models.ipynb  bigmodels.csv  customer_service_helper.ipynb  customer_service_use_case.ipynb  gemini.py  hf_hub_models.ipynb  llm.py  map-reduce.ipynb  replicate.py  tracking_costs.ipynb  wolfram_alpha.ipynb
chapter3/question_answering/: agent.py  app.py
chapter4/: README.md  agent.py  information_extraction.ipynb  mitigating_hallucinations.ipynb  pydantic_output_parser.py  tool_use.ipynb  tools.py
chapter4/question_answering/: agent.py  app.py
chapter5/: README.md  embeddings.ipynb  memory.ipynb  moderation.ipynb  pdf_summary.ipynb  rag_map_reduce.py  retrievers.ipynb
chapter5/chat_with_retrieval/: app.py  chat_with_documents.py
chapter5/summarize/: __init__.py  prompts.py
chapter6/: README.md  code_models.ipynb  code_models.py  code_understanding.ipynb  langchain_rag.ipynb  primes.py  software_development.ipynb
chapter6/software_development/: baby_dev.py  customer2.py  prime_numbers2.py  python_developer.py  test.py
chapter6/software_development/dev/: main.py
chapter7/: README.md  data_science.ipynb  prompts.py
chapter8/: README.md  fine_tuning.ipynb
chapter8/prompting/: chain_of_thought.py  self_consistency.py
chapter9/: README.md  chat.py  prompt_tracking.py  run_benchmark.py
chat_with_retrieval/: app.py  chat_with_documents.py  double_sub.py  gpt4chat.py  utils.py
data_science/: agent.py  app.py  prompts.py
information_extraction/: __init__.py
monitoring_and_evaluation/: create_benchmark.py  prompt_tracking.py  result_evaluation.py  run_benchmark.py  tracing.py  trajectory_evaluation.py
notebooks/: customer_service_helper.ipynb  fine_tuning.ipynb  langchain_transformers.ipynb  models.ipynb  retrieval.ipynb  web_crawling.ipynb
prompting/: chain_of_thought.py  fewshot.py  self_consistency.py  tree_of_thought.py  zeroshot.py
question_answering/: agent.py  app.py  tool_loader.py  utils.py
search_engine/: indexing.py  serve_vector_store.py  utils.py
search_engine/faiss_index.db/: index.faiss  index.pkl
software_development/: README.md  baby_dev.py  customer.py  customer2.py  prime_numbers.py  prime_numbers2.py  python_developer.py
summarize/: __init__.py  prompts.py
webserver/: chat.py
webserver/templates/: index.html
writing_assistant/: app.py
