[tool.poetry]
name = "generative-ai-with-langchain"
version = "0.1.0"
description = "Build large language model (LLM) apps with Python, ChatGPT and other models.."
authors = [
    "Ben Auffarth <auffarth@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/benman1/generative_ai_with_langchain"
keywords = ["llms", "langchain", "ai", "chatgpt", "gpt", "openai", "huggingface"]

[pylint.FORMAT]
max-line-length = 120

[tool.poetry.dependencies]
python = "^3.10"
jupyter="^1.0.0"
jupyterlab="4.0.2"
langchain = { version = "0.0.284", extras = ["docarray"] }
langchain_experimental="*"
langsmith="^0.0.65"
huggingface_hub="^0.14.1"
openai="0.28.1"
google-cloud-aiplatform="^1.26.0"
replicate="^0.8.4"
google-generativeai="0.1.0"
ruff="^0.0.278"
pypdf="^3.12.2"
tiktoken="^0.4.0"
duckduckgo_search="^3.8.4"
streamlit="^1.24.1"
arxiv="^1.4.8"
wikipedia="^1.4.0"
wolframalpha="^5.0.0"
unstructured="^0.8.1"
pandoc="^1.1.0"  # needs system install as well!
sentence-transformers="^2.2.2"
gradio="^3.38.0"
gpt4all="^1.0.6"
google-api-python-client="^2.94.0"
pip="^23.1.2"
apify-client="^1.4.0"
chromadb="^0.4.8"
lanarky="0.7.16"
ray = { version = ">=2.6.3", extras = ["serve"] }

faiss-cpu="^1.7.4"
promptwatch="^0.2.9"
langchain_decorators="^0.2.3"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
    "notebooks"
]
    
# Same as Black.
line-length = 99

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

