[tool.poetry]
name = "generative-ai-with-langchain"
version = "0.1.0"
description = "Build large language model (LLM) apps with Python, ChatGPT and other models.."
authors = [
    "Ben Auffarth <auffarth@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/benman1/generative_ai_with_langchain"
keywords = ["llms", "langchain", "ai", "chatgpt", "gpt", "openai", "huggingface", "claude3", "claude", "gemini"]
dynamic = ["dependencies"]

[pylint.FORMAT]
max-line-length = 120

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
    "notebooks"
]
# Same as Black.
line-length = 99

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

